--- a/template/src/assets/styles/mixins.less
+++ b/template/src/assets/styles/mixins.less
@@ -1,4 +1,5 @@
 /* 1px解决方案 */
+{{#isMobile}}
 .mix-1px (@color,@radius) {
   position: relative;
   @scale: 2;
@@ -59,6 +60,7 @@
     display: none;
   }
 }
+{{/isMobile}}
 /*
  * 清除浮动
  */
